| Summary: | ASTERISK-26273: core: Won't compile when LOW_MEMORY is enabled | ||
| Reporter: | Anthony Messina (amessina) | Labels: | |
| Date Opened: | 2016-08-05 11:41:14 | Date Closed: | 2016-09-21 09:59:07 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 13.12.0 14.0.0-rc1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Fedora 24 x86_64 | Attachments: | |
| Description: | When trying to compile the Asterisk 13 branch, including the UUID generation commit from https://gerrit.asterisk.org/#/c/3404/, I get ...asterisk.c:4435: undefined reference to `ast_pbx_uuid_get'
After removing LOW_MEMORY from MENUSELECT_CFLAGS, which I had enabled previously, I'm able to compile successfully. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-05 11:41:15.553-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: George Joseph (gjoseph) 2016-08-05 11:43:56.142-0500 The definition of ast_pbx_uuid_get in asterisk.c is inside an ifdef block that gets turned off with LOW_MEMORY. It just needs to be moved before the ifdef. | ||