core: Fix LOW_MEMORY missing symbol ast_pbx_uuid_get.

Move the function outside the conditional block that excludes
LOW_MEMORY.

ASTERISK-26273 #close

Change-Id: Ic290fa128222c410c3531107e30efacabc8493b4